@@ -5,6 +5,8 @@ Add new items to top.
 2006-12-19 Kimmo
  PATCH: [ 1618358 ] Fix warning about non-standard extension with enum
   Src: MainFrm.cpp
+ PATCH: [ 1618364 ] Make GPL URL const string
+  Src: MainFrm.cpp
 
 2006-12-18 Kimmo
  PATCH: [ 1617502 ] Cleanup use of enum in MovedLines
